# llm-book-study

./: .gitignore  hello.py  llm1.ipynb  llm2.ipynb  pyproject.toml
