[project]
name = "inception"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.5.2",
    "datasets>=3.4.0",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pykernel>=0.1.6",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]
